--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Adafruit LPS35HW
-version=1.0.2
+version=1.0.3
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=Arduino library for the LPS35HW sensors in the Adafruit shop
@@ -7,3 +7,4 @@ paragraph=Arduino library for the LPS35HW sensors in the Adafruit shop
 category=Sensors
 url=https://github.com/adafruit/Adafruit_LPS35HW
 architectures=*
+depends=Adafruit BusIO
